2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs: Don't crash
	  if the header file can't be found.

2007-05-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs: Use modal dialogs
	  for error messages.
	* MonoDevelop.Ide.mdp, Makefile.am: Updated.

2007-05-10  Mike Krüger <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs,
	  MonoDevelop.Ide.Gui/ProgressMonitors.cs,
	  MonoDevelop.Ide.Codons/PadCodon.cs:
	Fixed bug in pad loading.
2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp, Makefile.am: Reference shared assemblies from
	  the correct location.

2007-05-09  Mike Krüger <mkrueger@novell.com>
	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs,
	  MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.Gui/IPadContent.cs,
	  MonoDevelop.Ide.Gui/IPadContainer.cs,
	  MonoDevelop.Ide.Gui/Workbench.cs,
	  MonoDevelop.Ide.Gui/DefaultWorkbench.cs,
	  MonoDevelop.Ide.Gui/IWorkbenchLayout.cs,
	  MonoDevelop.Ide.Gui/IWorkbench.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs,
	  MonoDevelop.Ide.Gui/Pad.cs,
	  MonoDevelop.Ide.Codons/SolutionPadCodon.cs,
	  MonoDevelop.Ide.Codons/PadCodon.cs:
	 Worked on lazy loading of pads.

2007-05-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.StandardHeader/StandardHeaderPanel.cs,
	  MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs, 
	  MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: Added 
	  standard header feature.
	  
2007-05-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Added some missing dispose
	  calls in backgroundLoadCombine.

2007-05-08  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs (OnOKClicked):
	Simplified and fixed to work where the param is not an IMethod
	param.

2007-05-07  Lluis Sanchez Gual <lluis@novell.com> 
